--- a/.releaserc.json
+++ b/.releaserc.json
@@ -27,8 +27,8 @@
       {
         "preset": "conventionalcommits",
         "writerOpts": {
-          "mainTemplate": "## What's Changed\n\n{{#each commitGroups}}\n### {{title}}\n{{#each commits}}\n{{> commit}}\n{{/each}}\n{{/each}}\n\n{{> footer}}",
-          "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author.name}})"
+            "footerPartial": "\\n\\n[Full Changelog](https://github.com/owner/repo/compare/{{previousTag}}...{{currentTag}})",
+            "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author.name}})"
         },
         "presetConfig": {
           "types": [
