fix(sr): Update semantic_release.yml

--- a/.releaserc.json
+++ b/.releaserc.json
@@ -28,7 +28,7 @@
         "preset": "conventionalcommits",
         "writerOpts": {
             "footerPartial": "\\n\\n[Full Changelog](https://github.com/owner/repo/compare/{{previousTag}}...{{currentTag}})",
-            "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author.name}})"
+            "commitPartial": "* {{#if scope}}**{{scope}}:** {{/if}}{{subject}} (by @{{author.name}} \n)"
         },
         "presetConfig": {
           "types": [
